add molecule tests
rewrite jinja template for logrote configs to use more than one rotate block in one config file

add disable_systemd part for systemd-less OS like devuan or artixlinux

--- a/templates/logrotate.conf.j2
+++ b/templates/logrotate.conf.j2
@@ -1,37 +1,42 @@
 # {{ ansible_managed }}
+{% set rotate_log_attr = ['daily', 'weekly', 'monthly', 'yearly'] %}
 
 # see "man logrotate" for details
 # rotate log files weekly
+{% if logrotate_global.rotate_log in rotate_log_attr %}
+{{ logrotate_global.rotate_log }}
+{% else %}
 weekly
+{% endif %}
 
-{% if logrotate_global_su_user is defined and logrotate_global_su_user != '' and
-      logrotate_global_su_group is defined and logrotate_global_su_group != '' %}
+{% if logrotate_global.su_user is defined and logrotate_global.su_user | length != 0 and
+      logrotate_global.su_group is defined and logrotate_global.su_group | length != 0 %}
 # use the syslog group by default, since this is the owning group
 # of /var/log/syslog.
-su root syslog
+su {{ logrotate_global.su_user }} {{ logrotate_global.su_group }}
 {% endif %}
 
 # keep 4 weeks worth of backlogs
-rotate {{logrotate_global_rotate | default('2')}}
+rotate {{ logrotate_global.rotate | default('2') }}
 
-{% if logrotate_global_create is defined and logrotate_global_create | bool == true -%}
+{% if logrotate_global.create is defined and logrotate_global.create | bool == true -%}
 # create new (empty) log files after rotating old ones
 create
 {% endif %}
 
-{% if logrotate_global_dateext is defined and logrotate_global_dateext | bool == true -%}
+{% if logrotate_global.dateext is defined and logrotate_global.dateext | bool == true -%}
 # use date as a suffix of the rotated file
 dateext
 {% endif %}
 
-{% if logrotate_global_compress is defined and logrotate_global_compress | bool == true -%}
+{% if logrotate_global.compress is defined and logrotate_global.compress | bool == true -%}
 # uncomment this if you want your log files compressed
 compress
 {% endif %}
 
-{% if logrotate_global_tabooext is defined and logrotate_global_tabooext != '' %}
-tabooext + {{logrotate_global_tabooext | join(' ')}}
-# .pacorig .pacnew .pacsave
+{% if logrotate_global.tabooext is defined and logrotate_global.tabooext != '' %}
+tabooext + {{logrotate_global.tabooext | join(' ')}}
+{# .pacorig .pacnew .pacsave #}
 {% endif %}
 
 # packages drop log rotation information into this directory
