--- a/templates/cron_logrotate.j2
+++ b/templates/cron_logrotate.j2
@@ -1,10 +1,17 @@
-#!/bin/sh
+#!/usr/bin/env bash
+
 {% if not logroate_disable_systemd %}
 # skip in favour of systemd timer
 if [ -d /run/systemd/system ]; then
     exit 0
 fi
 {% endif %}
+
+LOGROTATE=$(command -v logrotate)
+
+if [ -z "${LOGROTATE}" ]; then
+    exit 1
+fi
 
 # this cronjob persists removals (but not purges)
 if [ ! -x /usr/sbin/logrotate ]; then
@@ -17,4 +24,3 @@ if [ $EXITVALUE != 0 ]; then
     /usr/bin/logger -t logrotate "ALERT exited abnormally with [$EXITVALUE]"
 fi
 exit $EXITVALUE
-
